ACLOCAL_AMFLAGS = -I m4

SUBDIRS = @BULLETTREE@ src doc data

EXTRA_DIST = README README.cygwin README.macosx README.windows ChangeLog COPYING missing questionnaire.txt

pkgdatadir=$(datadir)/doc/@PACKAGE@
pkgdata_DATA=AUTHORS ChangeLog COPYING README questionnaire.txt
# NEWS only contains "see changelog"
# CHANGES only contains "see NEW"
