ACLOCAL_AMFLAGS = -I m4

SUBDIRS = @BULLETTREE@ @ENETTREE@ src doc data

EXTRA_DIST = README README.cygwin README.macosx README.windows ChangeLog COPYING missing

pkgdatadir=$(datadir)/doc/@PACKAGE@
pkgdata_DATA=AUTHORS ChangeLog COPYING README
# NEWS only contains "see changelog"
# CHANGES only contains "see NEW"
